# tip-2-tip

./: .dockerignore  CLAUDE.md  Dockerfile  design.md  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql  002_create_trips.sql  003_create_activity_pins.sql  004_enhance_activity_pins.sql  005_add_performance_indexes.sql  006_create_expenses.sql  007_create_pin_votes.sql  008_add_composite_indexes.sql  20260403_000001_initial_schema.sql
backend/src/: common.rs  config.rs  db.rs  error.rs  main.rs  realtime.rs
backend/src/activity_pins/: handler.rs  mod.rs  model.rs  ws.rs
backend/src/auth/: extractor.rs  handler.rs  jwt.rs  middleware.rs  mod.rs  model.rs
backend/src/expenses/: handler.rs  mod.rs  model.rs  routes.rs  simplify.rs
backend/src/itinerary/: conflicts.rs  handler.rs  mod.rs  model.rs  routes.rs
backend/src/polls/: handler.rs  mod.rs  model.rs  routes.rs
backend/src/trips/: handler.rs  mod.rs  model.rs  routes.rs
backend/src/vault/: handler.rs  mod.rs  model.rs  routes.rs  storage.rs
frontend/: Caddyfile  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx  styles.css
frontend/src/lib/: api.ts  auth.tsx  constants.ts
frontend/src/pages/: Budget.tsx  Dashboard.tsx  Login.tsx  Signup.tsx  TripView.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/(app)/dashboard/: page.tsx
src/app/(app)/expenses/: page.tsx
src/app/(app)/itinerary/: page.tsx
src/app/(app)/map/: page.tsx
src/app/(app)/vault/: page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: page.tsx
src/components/: dashboard-header.tsx  debt-settlement.tsx  expense-summary.tsx  itinerary-preview.tsx  leaflet-map.tsx  quick-actions.tsx  sidebar.tsx  trip-overview-card.tsx
src/lib/: auth-context.tsx  mock-data.ts
(+2 files in other folders)
